# common-mistakes

./: README.md
pytest_mock_patch/: README.md  pyproject.toml
pytest_mock_patch/source/: database.py  user_service.py
pytest_mock_patch/tests/: test_user_service.py
