[tool.poetry]
name = "pytest-mock-patch"
version = "0.1.0"
description = ""
authors = ["EthanHistory <inssa1102@gmail.com>"]
readme = "README.md"
packages = [
    { include = "source" }
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
